build/log/idf_py_stderr_output_57754
/home/pi/httptc/main/mlx90614.c: In function 'mlx90614_read_temp':
/home/pi/httptc/main/mlx90614.c:10:21: error: implicit declaration of function 'esp_random'; did you mean 'srandom'? [-Wimplicit-function-declaration]
   10 |     *temp = 25.0 + (esp_random() % 1000) / 100.0;  // Simulated value
      |                     ^~~~~~~~~~
      |                     srandom
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:95: esp-idf/main/CMakeFiles/__idf_main.dir/mlx90614.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/pi/httptc/main/wifi_ap.c: In function 'wifi_init_softap':
/home/pi/httptc/main/wifi_ap.c:17:25: error: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
   17 |             .ssid_len = strlen("ESP32_TempCtrl"),
      |                         ^~~~~~
/home/pi/httptc/main/wifi_ap.c:5:1: note: include '<string.h>' or provide a declaration of 'strlen'
    4 | #include "esp_log.h"
  +++ |+#include <string.h>
    5 | 
/home/pi/httptc/main/wifi_ap.c:17:25: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
   17 |             .ssid_len = strlen("ESP32_TempCtrl"),
      |                         ^~~~~~
/home/pi/httptc/main/wifi_ap.c:17:25: note: include '<string.h>' or provide a declaration of 'strlen'
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:121: esp-idf/main/CMakeFiles/__idf_main.dir/wifi_ap.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
